@@ -11,6 +11,7 @@ buildscript {
 
   }
   dependencies {
+    classpath "net.serenity-bdd:serenity-gradle-plugin:2.4.34"
     classpath group: 'cz.habarta.typescript-generator', name: 'typescript-generator-gradle-plugin', version: '2.35.1025'
   }
 }
@@ -27,11 +28,12 @@ plugins {
   id 'org.springframework.boot' version '2.5.6'
   id 'com.github.ben-manes.versions' version '0.38.0'
   id 'hmcts.ccd.sdk' version '0.25.16'
-  id 'au.com.dius.pact' version '4.3.5'
+  id 'au.com.dius.pact' version '4.1.7'
 }
 
 apply plugin: 'cz.habarta.typescript-generator'
 apply plugin: 'com.github.ben-manes.versions'
+apply plugin: 'net.serenity-bdd.aggregator'
 
 group = 'uk.gov.hmcts'
 version = '0.0.1'
@@ -116,6 +118,7 @@ task functional(type: Test) {
   group = "Verification"
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
+  finalizedBy(aggregate)
 }
 
 task integration(type: Test) {
@@ -148,6 +151,12 @@ task contract(type: Test, description: 'Runs the pact contract tests.', group: '
   useJUnitPlatform()
   testClassesDirs = sourceSets.contractTest.output.classesDirs
   classpath = sourceSets.contractTest.runtimeClasspath
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 checkstyle {
@@ -252,7 +261,8 @@ def versions = [
   springBoot        : springBoot.class.package.implementationVersion,
   springfoxSwagger  : '3.0.0',
   s2sClient         : '4.0.0',
-  pact              : '4.1.7'
+  pact              : '4.1.7',
+  serenityCoreVersion: '3.0.2'
 ]
 
 ext["rest-assured.version"] = '4.4.0'
@@ -318,6 +328,7 @@ dependencies {
 
   annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
+  testImplementation 'com.github.hmcts:fortify-client:1.2.2:all'
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
     exclude group: 'junit', module: 'junit'
@@ -381,6 +392,11 @@ dependencies {
   contractTestCompile(group: 'org.yaml', name: 'snakeyaml', version: '1.30') {
     force = true
   }
+
+  testImplementation (group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenityCoreVersion)
+  testImplementation (group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenityCoreVersion)
+  testImplementation (group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenityCoreVersion)
+  testImplementation (group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenityCoreVersion)
 
   contractTestCompile sourceSets.main.runtimeClasspath
   contractTestCompile sourceSets.test.runtimeClasspath
